--- a/Skins/Storyboards/Base.lproj/Main.storyboard
+++ b/Skins/Storyboards/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="EQu-BP-Xyu" kind="show" id="sQg-UB-boT"/>
+                                    <segue destination="sfJ-fF-SGn" kind="show" id="Fvv-UA-hag"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ec9-Mw-V0L">
@@ -163,7 +163,7 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="137.94642857142856"/>
         </scene>
-        <!--Friends List Table View Controller-->
+        <!--Friends List-->
         <scene sceneID="heF-Lw-qCY">
             <objects>
                 <tableViewController id="sfJ-fF-SGn" customClass="FriendsListTableViewController" customModule="Skins" customModuleProvider="target" sceneMemberID="viewController">
@@ -172,17 +172,87 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BasicCell" textLabel="N6f-w1-sLf" rowHeight="71" style="IBUITableViewCellStyleDefault" id="9Zq-AQ-tT9">
-                                <rect key="frame" x="0.0" y="28" width="414" height="71"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PendingFriendCell" rowHeight="70" id="YMQ-u2-p0p" customClass="PendingFriendTableViewCell" customModule="Skins" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Zq-AQ-tT9" id="Z82-Iz-lFG">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="71"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YMQ-u2-p0p" id="0bh-kM-syc">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="N6f-w1-sLf">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="71"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KX6-z0-RWL">
+                                            <rect key="frame" x="20" y="11" width="105" height="29"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="29" id="D6P-HU-0en"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUq-b6-zVt">
+                                            <rect key="frame" x="20" y="36" width="30.333333333333329" height="23"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="23" id="1AN-XF-XKb"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IAn-bW-NaH">
+                                            <rect key="frame" x="281" y="20" width="49" height="30"/>
+                                            <state key="normal" title="Accept">
+                                                <color key="titleColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="acceptRequestPressed:" destination="YMQ-u2-p0p" eventType="touchUpInside" id="rxw-s9-4ew"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0oa-bP-aKQ">
+                                            <rect key="frame" x="342" y="20" width="52" height="30"/>
+                                            <state key="normal" title="Decline">
+                                                <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="declineRequestPressed:" destination="YMQ-u2-p0p" eventType="touchUpInside" id="z0M-Fh-mbw"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="0oa-bP-aKQ" firstAttribute="trailing" secondItem="0bh-kM-syc" secondAttribute="trailingMargin" id="9D1-0H-pxv"/>
+                                        <constraint firstItem="IAn-bW-NaH" firstAttribute="top" secondItem="0bh-kM-syc" secondAttribute="topMargin" constant="9" id="AR5-lu-mOh"/>
+                                        <constraint firstItem="KX6-z0-RWL" firstAttribute="top" secondItem="0bh-kM-syc" secondAttribute="topMargin" id="DDv-T1-8vA"/>
+                                        <constraint firstItem="0oa-bP-aKQ" firstAttribute="centerY" secondItem="IAn-bW-NaH" secondAttribute="centerY" id="EES-Na-Jab"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="0oa-bP-aKQ" secondAttribute="bottom" constant="9" id="I4c-t2-JGr"/>
+                                        <constraint firstItem="UUq-b6-zVt" firstAttribute="bottom" secondItem="0bh-kM-syc" secondAttribute="bottomMargin" id="LbO-Be-BNk"/>
+                                        <constraint firstItem="0oa-bP-aKQ" firstAttribute="leading" secondItem="IAn-bW-NaH" secondAttribute="trailing" constant="12" id="Mcr-BZ-r1V"/>
+                                        <constraint firstItem="0oa-bP-aKQ" firstAttribute="top" secondItem="0bh-kM-syc" secondAttribute="topMargin" constant="9" id="OTX-34-Erd"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="IAn-bW-NaH" secondAttribute="bottom" constant="9" id="iDF-gk-avr"/>
+                                        <constraint firstItem="UUq-b6-zVt" firstAttribute="leading" secondItem="0bh-kM-syc" secondAttribute="leadingMargin" id="jSF-sW-wb1"/>
+                                        <constraint firstItem="KX6-z0-RWL" firstAttribute="leading" secondItem="0bh-kM-syc" secondAttribute="leadingMargin" id="pQg-PF-XYp"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="displayNameLabel" destination="KX6-z0-RWL" id="6R7-R4-URD"/>
+                                    <outlet property="emailLabel" destination="UUq-b6-zVt" id="8u2-bN-b35"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BasicFriendCell" textLabel="N6f-w1-sLf" detailTextLabel="DeC-2G-tuh" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="9Zq-AQ-tT9">
+                                <rect key="frame" x="0.0" y="98" width="414" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Zq-AQ-tT9" id="Z82-Iz-lFG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="N6f-w1-sLf">
+                                            <rect key="frame" x="20" y="14.999999999999998" width="105" height="20.333333333333332"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DeC-2G-tuh">
+                                            <rect key="frame" x="20" y="38.333333333333329" width="30.333333333333332" height="14.333333333333334"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -195,13 +265,13 @@
                             <outlet property="delegate" destination="sfJ-fF-SGn" id="Fog-3U-ycM"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="kNL-Kl-pHh">
+                    <navigationItem key="navigationItem" title="Friends List" id="kNL-Kl-pHh">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="tpw-Sz-FXe"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eXO-7L-BQN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3005.7971014492755" y="443.97321428571428"/>
+            <point key="canvasLocation" x="2219" y="445"/>
         </scene>
         <!--Settings-->
         <scene sceneID="hCn-nl-cP7">
@@ -406,7 +476,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oi6-TM-jPW">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="How many golfers?" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Q2t-CB-bO4">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="How many golfers?" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2t-CB-bO4">
                                         <rect key="frame" x="8" y="0.0" width="398" height="60"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
@@ -829,7 +899,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="deB-bd-Jjy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3734.7826086956525" y="1237.5"/>
+            <point key="canvasLocation" x="3870" y="1572"/>
         </scene>
         <!--Scoresheet View Controller-->
         <scene sceneID="Jb9-Ik-Wuc">
@@ -939,25 +1009,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oVk-Td-C9y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1042" y="1211"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Rj1-5d-bAI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EQu-BP-Xyu" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="Kjv-NB-858"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IPo-c5-ZH0">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="sfJ-fF-SGn" kind="relationship" relationship="rootViewController" id="7q3-uK-J2e"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="R1J-fS-mS0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2211.594202898551" y="443.97321428571428"/>
         </scene>
     </scenes>
     <resources>
