--- a/Skins/Storyboards/Base.lproj/Main.storyboard
+++ b/Skins/Storyboards/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="137.94642857142856"/>
         </scene>
-        <!--Friends List-->
+        <!--Friends-->
         <scene sceneID="heF-Lw-qCY">
             <objects>
                 <tableViewController id="sfJ-fF-SGn" customClass="FriendsListTableViewController" customModule="Skins" customModuleProvider="target" sceneMemberID="viewController">
@@ -265,13 +265,67 @@
                             <outlet property="delegate" destination="sfJ-fF-SGn" id="Fog-3U-ycM"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Friends List" id="kNL-Kl-pHh">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="tpw-Sz-FXe"/>
+                    <navigationItem key="navigationItem" title="Friends" id="kNL-Kl-pHh">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="tpw-Sz-FXe">
+                            <connections>
+                                <segue destination="6rO-Gn-bVm" kind="presentation" id="KSt-9n-R6f"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eXO-7L-BQN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2219" y="445"/>
+        </scene>
+        <!--Add Friend View Controller-->
+        <scene sceneID="fbs-TN-2OP">
+            <objects>
+                <viewController id="6rO-Gn-bVm" customClass="AddFriendViewController" customModule="Skins" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AJ2-2q-QAg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bav-LT-Lya">
+                                <rect key="frame" x="20" y="89.333333333333314" width="374" height="718.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auR-cy-8wz">
+                                <rect key="frame" x="20" y="7.9999999999999982" width="374" height="31.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search / Add by email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkh-tr-UJx">
+                                <rect key="frame" x="20" y="47.333333333333343" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0fo-xj-MBx" firstAttribute="trailing" secondItem="pkh-tr-UJx" secondAttribute="trailing" constant="20" id="2hf-e8-fsa"/>
+                            <constraint firstItem="Bav-LT-Lya" firstAttribute="bottom" secondItem="0fo-xj-MBx" secondAttribute="bottom" id="BWi-QW-miS"/>
+                            <constraint firstItem="Bav-LT-Lya" firstAttribute="top" secondItem="pkh-tr-UJx" secondAttribute="bottom" constant="8" id="Etb-wa-r1P"/>
+                            <constraint firstItem="Bav-LT-Lya" firstAttribute="leading" secondItem="0fo-xj-MBx" secondAttribute="leading" constant="20" id="Lnu-y3-J3X"/>
+                            <constraint firstItem="0fo-xj-MBx" firstAttribute="trailing" secondItem="Bav-LT-Lya" secondAttribute="trailing" constant="20" id="MNo-aY-Fj1"/>
+                            <constraint firstItem="pkh-tr-UJx" firstAttribute="leading" secondItem="0fo-xj-MBx" secondAttribute="leading" constant="20" id="Tcs-8y-eZb"/>
+                            <constraint firstItem="Bav-LT-Lya" firstAttribute="top" secondItem="pkh-tr-UJx" secondAttribute="bottom" constant="8" id="VJM-AW-Lbu"/>
+                            <constraint firstItem="auR-cy-8wz" firstAttribute="top" secondItem="0fo-xj-MBx" secondAttribute="top" constant="8" id="dcB-rf-5kV"/>
+                            <constraint firstItem="auR-cy-8wz" firstAttribute="leading" secondItem="0fo-xj-MBx" secondAttribute="leading" constant="20" id="gya-Ow-A77"/>
+                            <constraint firstItem="0fo-xj-MBx" firstAttribute="trailing" secondItem="auR-cy-8wz" secondAttribute="trailing" constant="20" id="opz-V5-Pbz"/>
+                            <constraint firstItem="pkh-tr-UJx" firstAttribute="top" secondItem="auR-cy-8wz" secondAttribute="bottom" constant="8" id="wTn-PZ-Jiz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0fo-xj-MBx"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YdO-RU-6iL"/>
+                    <connections>
+                        <outlet property="contactsTableView" destination="Bav-LT-Lya" id="dYw-sr-cRb"/>
+                        <outlet property="searchTextField" destination="pkh-tr-UJx" id="H5x-tM-0rZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vvB-yZ-bEV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3018.840579710145" y="444.64285714285711"/>
         </scene>
         <!--Settings-->
         <scene sceneID="hCn-nl-cP7">
@@ -294,7 +348,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wur-of-eoO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="535" y="-767"/>
+            <point key="canvasLocation" x="2219" y="-1636"/>
         </scene>
         <!--Your Account-->
         <scene sceneID="kV2-eJ-X96">
@@ -357,7 +411,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kR6-qH-STR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1438" y="-767"/>
+            <point key="canvasLocation" x="3067" y="-1637"/>
         </scene>
         <!--Hole Score Helper View Controller-->
         <scene sceneID="kaO-eA-rr5">
@@ -436,7 +490,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PD4-5H-lSg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2112" y="1211"/>
+            <point key="canvasLocation" x="2219" y="1205"/>
         </scene>
         <!--Stats-->
         <scene sceneID="nPV-ou-7jX">
@@ -899,7 +953,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="deB-bd-Jjy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3870" y="1572"/>
+            <point key="canvasLocation" x="3764" y="1205"/>
         </scene>
         <!--Scoresheet View Controller-->
         <scene sceneID="Jb9-Ik-Wuc">
@@ -962,7 +1016,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cfP-gk-tFN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2959" y="1572"/>
+            <point key="canvasLocation" x="3020" y="1205"/>
         </scene>
         <!--Hole Page View Controller-->
         <scene sceneID="UZY-Ka-0To">
@@ -972,7 +1026,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IZJ-0x-Tw1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3868.115942028986" y="995.75892857142856"/>
+            <point key="canvasLocation" x="4465" y="1205"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rT5-jl-Aa2">
@@ -992,29 +1046,8 @@
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="137.94642857142856"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="X29-d1-UIB">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0zj-z0-wMz" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Wcg-JP-jUz">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="4ED-EG-fcM" kind="relationship" relationship="rootViewController" id="qrd-w3-0wv"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oVk-Td-C9y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1042" y="1211"/>
-        </scene>
     </scenes>
     <resources>
         <image name="gear" catalog="system" width="64" height="58"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="2Fa-xE-9u6"/>
-    </inferredMetricsTieBreakers>
 </document>
